; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/asn1/extr_check-common.c_segv_handler.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/asn1/extr_check-common.c_segv_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.segv_handler.msg = private unnamed_addr constant [25 x i8] c"SIGSEGV i current test: \00", align 16
@.str = private unnamed_addr constant [12 x i8] c"/dev/stdout\00", align 1
@O_WRONLY = common dso_local global i32 0, align 4
@current_test = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [2 x i8] c" \00", align 1
@current_state = common dso_local global i8* null, align 8
@.str.2 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @segv_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @segv_handler(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca [25 x i8], align 16
  store i32 %0, i32* %2, align 4
  %5 = bitcast [25 x i8]* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %5, i8* align 16 getelementptr inbounds ([25 x i8], [25 x i8]* @__const.segv_handler.msg, i32 0, i32 0), i64 25, i1 false)
  %6 = load i32, i32* @O_WRONLY, align 4
  %7 = call i32 @open(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %6, i32 384)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = icmp sge i32 %8, 0
  br i1 %9, label %10, label %30

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = getelementptr inbounds [25 x i8], [25 x i8]* %4, i64 0, i64 0
  %13 = call i32 @write(i32 %11, i8* %12, i32 25)
  %14 = load i32, i32* %3, align 4
  %15 = load i8*, i8** @current_test, align 8
  %16 = load i8*, i8** @current_test, align 8
  %17 = call i32 @strlen(i8* %16)
  %18 = call i32 @write(i32 %14, i8* %15, i32 %17)
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @write(i32 %19, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 1)
  %21 = load i32, i32* %3, align 4
  %22 = load i8*, i8** @current_state, align 8
  %23 = load i8*, i8** @current_state, align 8
  %24 = call i32 @strlen(i8* %23)
  %25 = call i32 @write(i32 %21, i8* %22, i32 %24)
  %26 = load i32, i32* %3, align 4
  %27 = call i32 @write(i32 %26, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0), i32 1)
  %28 = load i32, i32* %3, align 4
  %29 = call i32 @close(i32 %28)
  br label %30

30:                                               ; preds = %10, %1
  %31 = call i32 @_exit(i32 1) #4
  unreachable
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @open(i8*, i32, i32) #2

declare dso_local i32 @write(i32, i8*, i32) #2

declare dso_local i32 @strlen(i8*) #2

declare dso_local i32 @close(i32) #2

; Function Attrs: noreturn
declare dso_local i32 @_exit(i32) #3


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
